--- a/data_explore.ipynb
+++ b/data_explore.ipynb
@@ -18,42 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def latlong_s2id(lat,lon,s2_size):\n",
-    "    pos = s2.LatLng.from_degrees(lat, lon)\n",
-    "    s2cell = s2.CellId.from_lat_lng(pos).parent(s2_size)\n",
-    "    return str(s2cell.id())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3301598242982068224'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "latlong_s2id(-8,115,13)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {
     "collapsed": false
@@ -284,7 +248,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def latlong_s2id(lat,lon,s2_size):\n",
+    "    pos = s2.LatLng.from_degrees(lat, lon)\n",
+    "    s2cell = s2.CellId.from_lat_lng(pos).parent(s2_size)\n",
+    "    return str(s2cell.id())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3301598242982068224'"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "latlong_s2id(-8,115,13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -296,38 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'negatives_location' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-ce00e973a435>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMeanShift\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbin_seeding\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnegatives_location\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlabels_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mcluster_centers\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcluster_centers_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'negatives_location' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "ms = MeanShift(bin_seeding=True)\n",
-    "ms.fit(negatives_location)\n",
-    "labels = ms.labels_\n",
-    "cluster_centers = ms.cluster_centers_\n",
-    "\n",
-    "labels_unique = np.unique(labels)\n",
-    "n_clusters_ = len(labels_unique)\n",
-    "\n",
-    "print(\"number of estimated clusters : %d\" % n_clusters_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 88,
    "metadata": {
     "collapsed": false
    },
@@ -346,23 +315,7 @@
       "6 -6.197555  106.824558\n",
       "7 -6.205077  106.821709\n",
       "8 -6.201414  106.822153\n",
-      "9 -6.203839  106.820509\n",
-      "******train.csv\n",
-      "****** fit\n",
-      "******** labels\n",
-      "[2 2 5 ..., 4 2 6]\n",
-      "******** cluster sizes\n",
-      "[(0, 109), (1, 290), (2, 749), (3, 139), (4, 391), (5, 193), (6, 151), (7, 201)]\n",
-      "******** cluster centers\n",
-      "[[  -6.20290565  106.82689862]\n",
-      " [  -6.20310979  106.81983863]\n",
-      " [  -6.20239293  106.82359409]\n",
-      " [  -6.19751386  106.82472824]\n",
-      " [  -6.19907696  106.8223279 ]\n",
-      " [  -6.2059394   106.81822892]\n",
-      " [  -6.19843441  106.82840166]\n",
-      " [  -6.20535892  106.82237862]]\n",
-      "number of estimated clusters  8 ,*  8\n"
+      "9 -6.203839  106.820509\n"
      ]
     }
    ],
@@ -377,30 +330,15 @@
     "\n",
     "clustering_algo = KMeans(n_clusters=8)\n",
     "\n",
-    "# from sklearn.cluster import MeanShift, estimate_bandwidth\n",
-    "# bandwidth = estimate_bandwidth(pickup_locations, quantile=0.5)\n",
-    "# clustering_algo = MeanShift(bin_seeding=True)\n",
-    "\n",
-    "print(\"******train.csv\")\n",
     "labels = clustering_algo.fit_predict(pickup_locations)\n",
     "\n",
-    "print(\"****** fit\")\n",
-    "# labels = clustering_algo.labels_\n",
-    "print(\"******** labels\")\n",
-    "print(labels)\n",
-    "# print(np.unique(labels))\n",
-    "\n",
     "cluster_sizes = {i: len(np.where(clustering_algo.labels_ == i)[0]) for i in range(clustering_algo.n_clusters)}\n",
-    "print(\"******** cluster sizes\")\n",
-    "print(sorted(cluster_sizes.items()))\n",
     "\n",
     "cluster_centers = clustering_algo.cluster_centers_\n",
-    "print(\"******** cluster centers\")\n",
-    "print(cluster_centers)\n",
+    "\n",
     "labels_unique = np.unique(labels)\n",
     "n_clusters_ = len(labels_unique)\n",
     "\n",
-    "print(\"number of estimated clusters \", n_clusters_, \",* \", clustering_algo.n_clusters)\n",
     "\n",
     "\n"
    ]
@@ -435,14 +373,10 @@
    "source": [
     "test_location = [-6.2040803, 106.8217632]\n",
     "predicted_label = clustering_algo.predict(np.array(test_location).reshape(1, -1))\n",
-    "print(\"***************  predicted label\")\n",
-    "print(predicted_label)\n",
     "\n",
     "predicted_cluster_center = cluster_centers[predicted_label][0]\n",
     "\n",
-    "\n",
     "pickup_locations['class']=labels\n",
-    "print(pickup_locations.head(5))\n",
     "colors = {0:'green', 1:'red', 2:'blue', 3:'yellow', 4:'m', 5:'orange', 6: 'black', 7:'cyan'}\n",
     "\n",
     "predicted_cluster_points = pickup_locations[pickup_locations['class'] == predicted_label[0]]\n",
@@ -457,8 +391,9 @@
     "        center = point\n",
     "\n",
     "optimal_pickup_location = center\n",
-    "print(\"************ . optimal_pickup_location\")\n",
-    "print(optimal_pickup_location, min_dist)"
+    "print(\"optimal_pickup_location\")\n",
+    "print(optimal_pickup_location)\n",
+    "print(\"minimum distance\", min_dist)"
    ]
   },
   {
@@ -494,57 +429,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import gmplot\n",
-    "\n",
-    "gmap = gmplot.GoogleMapPlotter(optimal_pickup_location[0], optimal_pickup_location[1], 16)\n",
-    "\n",
-    "# gmap.plot([optimal_pickup_location[0]], [optimal_pickup_location[1]], 'cornflowerblue', edge_width=10,marker=True)\n",
-    "gmap.scatter([optimal_pickup_location[0]], [optimal_pickup_location[1]], 'k',size=40, marker=True)\n",
-    "\n",
-    "\n",
-    "gmap.draw(\"mymap.html\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "pathlon = -117.2974695,-117.2980671,-117.2984607,-117.2979182,-117.2974082,-117.2966604,-117.2977518,-117.2987498,-117.2981491,-117.297708,-117.2972804,-117.2965301,-117.2979485,-117.2975028,-117.2980506,-117.2982983,-117.2976609,-117.2970861,-117.2969908,-117.2981731,-117.2987695,-117.2981146,-117.2976909,-117.2969674,-117.2969299,-117.298394\n",
-    "pathlat = 33.27172039,33.27197757,33.27217535,33.27225324,33.27218351,33.27233921,33.27242614,33.27248971,33.27268346,33.27265944,33.27263664,33.27279608,33.27281652,33.27194103,33.27176546,33.27224514,33.27222714,33.27208829,33.27237357,33.27243373,33.27262189,33.27268296,33.27265933,33.27262125,33.27282274,33.27283925\n",
+    "import gmplot\n",
+    "\n",
+    "pathlon = test_location[1], optimal_pickup_location[1]\n",
+    "pathlat = test_location[0], optimal_pickup_location[0]\n",
     "\n",
     "gmap = gmplot.GoogleMapPlotter(pathlat[0],pathlon[0],18)\n",
     "\n",
     "gmap.plot(pathlat,pathlon,'cornflowerblue', edge_width=10)\n",
     "\n",
     "gmap.draw('map.html')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "gmap = gmplot.GoogleMapPlotter(optimal_pickup_location[0], optimal_pickup_location[1], 16)\n",
-    "\n",
-    "# gmap.plot([optimal_pickup_location[0]], [optimal_pickup_location[1]], 'cornflowerblue', edge_width=10,marker=True)\n",
-    "#gmap.scatter([optimal_pickup_location[0]], [optimal_pickup_location[1]], 'k',size=40, marker=True)\n",
-    "gmap.marker(optimal_pickup_location[0], optimal_pickup_location[1], c=\"blue\")\n",
-    "gmap.marker(test_location[0], test_location[1], c=\"red\")\n",
-    "\n",
-    "gmap.draw(\"mymap_1.html\")"
    ]
   },
   {
